--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -24,7 +24,7 @@ veggy <- cabbages
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
-
+For the data I would use a Histogram or a box whisker plot as a graphical method as well as integrals as a numerical method.
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
@@ -34,6 +34,10 @@ veggy <- cabbages
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+```{r}
+boxplot(VitC~Cult,data=veggy)
+```
+
 
 ### Numerical Descriptive Results
 
