--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -50,6 +50,12 @@ C52 has a higher mean, median,Q1,Q3,max,and mode than c39. Meaning c52 has a big
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+```{r}
+model1 <- aov(VitC~Cult,data=veggy)
+summary.aov(model1)
+```
+Null Hypothesis (H0): There is no significant difference between the groups or conditions being compared. In other words, the means of the groups are equal. Alternative Hypothesis (H1): There is a significant difference between at least two of the groups or conditions. In other words, at least one group mean is different from the others. This very small p-value suggests that we reject the null hypothesis. There is sufficient evidence to conclude that there is a statistically significant difference between the group means.
+
 
 
 # Discussion and Conclusion
